update meta to fix up bugtracker

--- a/README.pod
+++ b/README.pod
@@ -40,9 +40,9 @@ L<pocketknife|https://github.com/igal/pocketknife> (Ruby)
 
 =head2 Bugs / Feature Requests
 
-Please report any bugs or feature requests by email to C<bug-pantry at rt.cpan.org>, or through
-the web interface at L<http://rt.cpan.org/Public/Dist/Display.html?Name=pantry>. You will be automatically notified of any
-progress on the request by the system.
+Please report any bugs or feature requests through the issue tracker
+at L<http://github.com/dagolden/pantry/issues>.
+You will be notified automatically of any progress on your issue.
 
 =head2 Source Code
 
