updated meta files

--- a/README.pod
+++ b/README.pod
@@ -109,7 +109,7 @@ L<pocketknife|https://github.com/igal/pocketknife> (Ruby)
 
 =back
 
-=for :stopwords cpan testmatrix url annocpan anno bugtracker rt cpants kwalitee diff irc mailto metadata placeholders
+=for :stopwords cpan testmatrix url annocpan anno bugtracker rt cpants kwalitee diff irc mailto metadata placeholders metacpan
 
 =head1 SUPPORT
 
