updated Changes, README and meta

--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for pantry
 
 {{$NEXT}}
 
+    [Fixed]
+
+    - 'pantry list' now lists node *names* not *filenames*
+
 0.002     2012-05-02 17:15:46 America/New_York
 
     [Added]
