--- a/Changes
+++ b/Changes
@@ -2,6 +2,12 @@ Revision history for pantry
 
 {{$NEXT}}
 
+    [Added]
+
+    - 'pantry create' now accepts 'host', 'port', and 'user'
+      parameters that override the default SSH connection
+      settings.
+
 0.005     2012-05-11 13:25:40 America/New_York
 
     [Added]
