--- a/Changes
+++ b/Changes
@@ -2,6 +2,12 @@ Revision history for pantry
 
 {{$NEXT}}
 
+    [Added]
+
+    - Added support for multiple environments, including
+      environment attributes and environment-specific
+      run lists in roles
+
 0.008     2012-08-02 22:53:18 America/New_York
 
     [Added]
