--- a/README.pod
+++ b/README.pod
@@ -40,7 +40,7 @@ See the following sections for details and examples by topic.
   $ pantry init
 
 This initializes a pantry in the current directory.  Currently, it just
-creates some directories for use storing cookbooks, node data, etc.
+creates some directories for use storing cookbooks, node data, data bags, etc.
 
 =head3 list
 
@@ -48,6 +48,7 @@ creates some directories for use storing cookbooks, node data, etc.
   $ pantry list roles
   $ pantry list environments
   $ pantry list cookbooks
+  $ pantry list bags
 
 Prints to STDOUT a list of items of a particular type managed within the
 pantry.
@@ -247,6 +248,55 @@ or omit it to apply/strip from the default list.
   $ pantry apply role web -r nginx
   $ pantry apply role web -r ufw -E production
 
+=head2 Managing data bags
+
+In this section, when a bag NAME is required, any name without whitespace is
+acceptable. The name will be converted to lowercase for consistency.  When
+referring to an existing bag, you may often abbreviate it to a unique prefix,
+e.g. "users/d" for "users/dagolden".
+
+Note that data bags may exist at the "top" level or within subdirectories and
+so either of these forms are acceptable as bag names:
+
+=over 4
+
+=item *
+
+top_level_bag
+
+=item *
+
+bag_name/item_name
+
+=back
+
+Also, whenever a command takes a single 'bag NAME' target,
+you may give a single dash ('-') as the NAME and the command
+will be run against a list of bags read from STDIN.
+
+You can combine this with the C<pantry list> command to do
+batch operations.
+
+  $ pantry list bags | grep users | pantry apply bag - -d remove=true
+
+=head3 create, rename, delete, show and edit
+
+These commands work the same as they do for nodes.
+The difference is that you must specify the 'bag' type:
+
+  $ pantry create bag users/dagolden
+  $ pantry show bag users/dagolden
+
+=head3 apply and strip
+
+The C<apply> and C<strip> commands have slight differences, as bags don't have
+attributes in the way that nodes or roles do.  The "default" flags are used
+and just set fields in the top level of the bag.  (Don't set "id" or bad things
+might happen.)
+
+  $ pantry apply bag NAME -d key=value
+  $ pantry strip bag NAME -d key
+
 =head2 Managing environments
 
 In this section, when a environment NAME is required, any name without
@@ -398,10 +448,6 @@ searching nodes based on configuration
 
 =item *
 
-data bags
-
-=item *
-
 encrypted data bags (or equivalent functionality)
 
 =item *
@@ -433,6 +479,10 @@ littlechef L<http://github.com/tobami/littlechef> (Python)
 =item *
 
 pocketknife L<http://github.com/igal/pocketknife> (Ruby)
+
+=item *
+
+knife-solo L<https://github.com/matschaffer/knife-solo> (Ruby)
 
 =back
 
