fix spurious node data dump during sync

--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for pantry
 
 {{$NEXT}}
 
+    [Fixed]
+
+    - Removed a spurious dump of node data during environment syncs
+
 0.010     2012-09-28 17:25:07 America/New_York
 
     [Added]
